--- a/notebooks/basic_tutorial/02.sedona_read_various_data_format.ipynb
+++ b/notebooks/basic_tutorial/02.sedona_read_various_data_format.ipynb
@@ -1812,7 +1812,11 @@
     "  - covering metadata: For each geometry column, a top-level struct column containing xmin, ymin, xmax,ymax. The `covering` field specifies a bounding box column to help accelerate spatial data retrieval \n",
     "\n",
     "\n",
-    "##### Embeded"
+    "##### Integrated CRS coordinates for geometry columns\n",
+    "\n",
+    "The maps of the surface of the earth is in two dimensions. But, as you know, the world is actually a three-dimensional globe. So we have to use a method called a `map projection` to render it as a flat surface. We use a coordinate reference system (CRS) to show how the projected points correspond to real locations on Earth.\n",
+    "\n",
+    "For example, the coordinate (Latitude: 48.8566, Longitude: 2.3522) is in Paris in the `WGS84(ESPG:4326)` CRS. The same point in `EPSG:3857` (e.g. OSM) would be (X: 261845.83,Y: 6250561.88)"
    ],
    "id": "f45caa57963a3c5a"
   },
@@ -2141,6 +2145,12 @@
    "cell_type": "markdown",
    "source": [
     "# Appendix\n",
+    "\n",
+    "## Coordinate Reference System (CRS)\n",
+    "\n",
+    "The maps of the surface of the earth is in two dimensions. But, as you know, the world is actually a three-dimensional globe. So we have to use a method called a `map projection` to render it as a flat surface. We use a coordinate reference system (CRS) to show how the projected points correspond to real locations on Earth.\n",
+    "\n",
+    "A Coordinate Reference System (CRS) is fundamental in geospatial data and GIS (Geographic Information Systems) because it defines how spatial data is represented on the Earth's surface. Without a proper CRS, geographic data from different sources would not align correctly, leading to errors and confusion in analysis, visualization, and decision-making.\n",
     "\n",
     "## **WGC**(World Geodetic reference System)\n",
     "\n",
