--- a/notebooks/basic_tutorial/02.sedona_read_various_data_format.ipynb
+++ b/notebooks/basic_tutorial/02.sedona_read_various_data_format.ipynb
@@ -1291,7 +1291,15 @@
     "\n",
     "GeoParquet is an **Open Geospatial Consortium (OGC) standard** that adds interoperable geospatial types `(Point, Line, Polygon)` to Parquet. Currently(27/11/2024), the stable version is 1.1.0.\n",
     "\n",
-    "You can find the official site of geo-parquet [here](https://geoparquet.org/)"
+    "You can find the official site of geo-parquet [here](https://geoparquet.org/).\n",
+    "\n",
+    "You can find the current version data format specification [here](https://geoparquet.org/releases/v1.1.0/). The supported geo type are:\n",
+    "- point\n",
+    "- line\n",
+    "- polygon\n",
+    "- multipoint\n",
+    "- multiline\n",
+    "- multipolygon"
    ],
    "metadata": {
     "collapsed": false
@@ -2103,11 +2111,38 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "### 2.5 Write to \n",
+    "\n",
+    "Unfortunately, the Spark SQL JDBC data source doesn't support creating geometry types in PostGIS using the 'createTableColumnTypes' option. Only the Spark built-in types are recognized. This means that you'll need to manage your PostGIS schema separately from Spark. One way to do this is to create the table with the correct geometry column before writing data to it with Spark. Alternatively, you can write your data to the table using Spark and then manually alter the column to be a geometry type afterward.\n",
+    "\n",
+    "Postgis uses EWKB to serialize geometries. If you convert your geometries to EWKB format in Sedona you don't have to do any additional conversion in Postgis.\n",
+    "\n",
+    "```python\n",
+    "# create a table in my_postgis_db first. create table my_table (id int8, geom geometry);\n",
+    "\n",
+    "# Use jdbc to insert data, but don't let Spark recreate the table.\n",
+    "# you can use the option(\"truncate\",\"true\")\n",
+    "df.withColumn(\"geom\", expr(\"ST_AsEWKB(geom)\")\n",
+    "    .write.format(\"jdbc\")\n",
+    "    .option(\"truncate\",\"true\")\n",
+    "    .save()\n",
+    "\n",
+    "# If you didn't create the table before writing you can change the type afterward in your my_postgis_db\n",
+    "# alter table my_table alter column geom type geometry;\n",
+    "\n",
+    "```"
+   ],
+   "id": "e65e2abaea8c2115"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "### 2.6 Write to other formats\n",
     "\n",
     "Sedona does not support to write in other formats natively. But there exist many tools which can convert geojson or wkt to other formats such as shapefile, GML, etc."
    ],
-   "id": "e65e2abaea8c2115"
+   "id": "3a7f4c02fb0d8660"
   },
   {
    "cell_type": "markdown",
