--- a/notebooks/basic_tutorial/01.Sedona_QuickStart.ipynb
+++ b/notebooks/basic_tutorial/01.Sedona_QuickStart.ipynb
@@ -793,10 +793,79 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## Visualize the data\n",
-    "\n"
+    "## 4. Visualize the data\n",
+    "\n",
+    "Sedona provides two api to visualize geospatial data directly.\n",
+    "- pydeck: https://pypi.org/project/pydeck/\n",
+    "- keplergl: https://pypi.org/project/keplergl/\n",
+    "\n",
+    "\n",
+    "We can also easily convert the sedona dataframe to geopandas dataframe. Then all tools which can visualize geopandas dataframe can be used as well.\n",
+    "In this tutorial, we only show two examples:\n",
+    "- matplotlib\n",
+    "- folium\n",
+    "\n",
+    "### 4.1 Generate map for pydeck"
    ],
    "id": "31d2a3ea92b9a02e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "pydeck_map_path = f\"{data_dir}/tmp/pydeck_map.html\"\n",
+    "\n",
+    "sedona_pydeck_map = SedonaPyDeck.create_choropleth_map(\n",
+    "    df=airports_count, plot_col=\"airport_count\",\n",
+    ")\n",
+    "\n",
+    "sedona_pydeck_map.to_html(pydeck_map_path)"
+   ],
+   "id": "4766c3f09740fd67"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### 4.2 Generate map for keplergl",
+   "id": "45839b2f8f2a6098"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-28T13:35:00.079955Z",
+     "start_time": "2024-11-28T13:34:59.626778Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "kepler_map_path = f\"{data_dir}/tmp/kepler_map.html\"\n",
+    "\n",
+    "sedona_kepler_map = SedonaKepler.create_map(df=airports_count,name=\"airports_count\")\n",
+    "\n",
+    "sedona_kepler_map.save_to_html(file_name=kepler_map_path)"
+   ],
+   "id": "8d696926edbc66ed",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n",
+      "Map saved to C:\\Users\\PLIU\\Documents\\git\\GeoParquetAndSedona/data/tmp/kepler_map.html!\n"
+     ]
+    }
+   ],
+   "execution_count": 36
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "\n",
+   "id": "c33d1bd47dea67a0"
   },
   {
    "cell_type": "code",
@@ -820,7 +889,7 @@
    "cell_type": "markdown",
    "id": "7f6fd0f355eb0b1a",
    "metadata": {},
-   "source": "Visualize the data with matplotlib"
+   "source": "### 4.3 Visualize the airport count per country with matplotlib"
   },
   {
    "cell_type": "code",
@@ -871,6 +940,12 @@
     }
    ],
    "execution_count": 27
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### 4.4 Visualize the airport count per country with folium",
+   "id": "b32b95da6139612d"
   },
   {
    "metadata": {
@@ -925,14 +1000,6 @@
    "id": "9ecf91b828ec0efa",
    "outputs": [],
    "execution_count": 30
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "9f5573dc27a5b7e0"
   }
  ],
  "metadata": {
