--- a/notebooks/basic_tutorial/02.sedona_read_various_data_format.ipynb
+++ b/notebooks/basic_tutorial/02.sedona_read_various_data_format.ipynb
@@ -22,6 +22,8 @@
     "- pbf\n",
     "- ETC\n",
     "\n",
+    "This website: https://data.enseignementsup-recherche.gouv.fr/explore/dataset/fr-esr-referentiel-geographique/export/ shows how french ministry share their geospatial data.\n",
+    "\n",
     "## Geospatial data \n",
     "\n",
     "To be able to use sedona to do geospatial operations (e.g calculate distance, area hierarchy, etc.), we need to construct geo dataframe first. A geo dataframe contains one or more columns of below type:\n",
