--- a/notebooks/basic_tutorial/03.france_commune.ipynb
+++ b/notebooks/basic_tutorial/03.france_commune.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Use sedona to read various geospatial data format\n",
+    "# Geo \n",
     "\n",
     "To work with geospatial data, it's essential to read and write data in geospatial data format. The **full list of the constructor for the geo data types** can be found [here](https://sedona.apache.org/1.6.1/api/sql/Constructor/)\n",
     "For sedona version `1.6.1`, it supports at least 10 formats:\n",
