--- a/notebooks/basic_tutorial/03.france_commune.ipynb
+++ b/notebooks/basic_tutorial/03.france_commune.ipynb
@@ -3,17 +3,17 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Geo \n",
+    "# Geospatial functions \n",
     "\n",
-    "To work with geospatial data, it's essential to read and write data in geospatial data format. The **full list of the constructor for the geo data types** can be found [here](https://sedona.apache.org/1.6.1/api/sql/Constructor/)\n",
-    "For sedona version `1.6.1`, it supports at least 10 formats:\n",
+    "Spatial joins:\n",
+    "- ST_Contains : https://sedona.apache.org/latest/api/sql/Predicate/?h=st_contains#st_contains\n",
+    "- ST_Intersects\n",
+    "- ST_Within\n",
     "\n",
-    "In this tutorial, we will show example of sedona to read various geospatial data format such as:\n",
-    "- geojson\n",
-    "- shape file\n",
-    "- csv/tsv\n",
-    "- pbf\n",
-    "- geoparquet\n",
+    "Spatial Aggregation: https://sedona.apache.org/latest/api/sql/AggregateFunction/\n",
+    "- ST_Envelope_Aggr\n",
+    "- ST_Intersection_Aggr\n",
+    "- ST_Union_Aggr\n",
     "\n",
     "## Geospatial data \n",
     "\n",
