--- a/notebooks/basic_tutorial/03.Spatial_query_in_sedona.ipynb
+++ b/notebooks/basic_tutorial/03.Spatial_query_in_sedona.ipynb
@@ -30,15 +30,25 @@
     "2.3109269,48.8179559\n",
     "2.3066783,48.8179488\n",
     "\n",
+    "polygone represents hospital Paul-Brousse:\n",
+    "2.359668,48.7974719\n",
+    "2.3590672,48.7944258\n",
+    "2.3640883,48.7945106\n",
+    "2.3641849,48.7977687\n",
+    "2.359668,48.7974719\n",
+    "\n",
     "\n",
     "      \n",
     "The coordinates of eiffel-tour:\n",
     "2.2949409,48.8579388 \n",
     "\n",
-    "- **ST_Contains**(polygondf.polygonshape,pointdf.pointshape): Return true if A fully contains B. (E.g. check if a polygone contains a point)\n",
+    "The coordinates of bordeaux:\n",
+    "-0.574851 44.8453837\n",
+    "\n",
+    "- **ST_Contains**(polygondf.polygonshape,pointdf.pointshape): Return true if A fully contains B.\n",
     "- **ST_Crosses**(polygondf.polygonshape,polygondf.polygonshape): Return true if A crosses B. (E.g. check if a polygon cross inside a polygone)\n",
     "- **ST_Disjoint**(polygondf.polygonshape,polygondf.polygonshape): Return true if A and B are disjoint. (E.g. check if a polygon disjoint another polygone)\n",
-    "- **ST_DWithin**(leftGeometry: Geometry, rightGeometry: Geometry, distance: Double, useSpheroid: Optional(Boolean) = false): Returns true if 'leftGeometry' and 'rightGeometry' are within a specified 'distance'. If useSpheroid is passed true, ST_DWithin uses Sedona's ST_DistanceSpheroid to check the spheroid distance between the centroids of two geometries. The **unit of the distance in this case is meter**. If useSpheroid is passed false, ST_DWithin uses Euclidean distance and the unit of the distance is the same as the CRS of the geometries. To obtain the correct result, please consider using ST_Transform to put data in an appropriate CRS.\n",
+    "- **ST_DWithin**(leftGeometry: Geometry, rightGeometry: Geometry, distance: Double, useSpheroid: Optional(Boolean) = false): \n",
     "- **ST_Equals**(A: Geometry, B: Geometry): Return true if A equals to B. (E.g. checks if two line string LINESTRING(0 0,10 10), LINESTRING(0 0,5 5,10 10) equals.)\n",
     "- ST_Intersects(polygondf.polygonshape,pointdf.pointshape): Return true if A intersects B. "
    ],
@@ -157,23 +167,22 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 1. ST_Contains\n",
+    "## 1. ST_Contains VS ST_Within\n",
     "\n",
+    "- **ST_Contains**(A: Geometry, B: Geometry): Return true if A fully contains B.\n",
+    "- **ST_Within**(A: Geometry, B: Geometry): Return true if A is fully contained by B\n",
     "We check if a polygon contains a point or not:\n",
-    "- eiffel_tour in Île-de-France or not\n",
-    "- bordeaux city hall in Île-de-France or not\n",
-    "\n",
-    "\n",
-    "A point:\n",
-    "1.5655, 47.9733"
+    "- eiffel_tour(point) in Île-de-France(polygon) or not\n",
+    "- bordeaux city hall(point) in Île-de-France(polygon) or not\n",
+    "- casd(polygon) inside Île-de-France(polygon) or not"
    ],
    "id": "869d3439eaee0797"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T13:04:50.409037Z",
-     "start_time": "2024-12-02T13:04:50.393744Z"
+     "end_time": "2024-12-02T13:47:19.171133Z",
+     "start_time": "2024-12-02T13:47:19.151252Z"
     }
    },
    "cell_type": "code",
@@ -183,39 +192,50 @@
     "casd = \"POLYGON((2.3065817  48.8204849,2.3063672  48.8177934,2.3113775  48.8177369,2.3114955  48.8205838,2.3065817  48.8204849))\"\n",
     "\n",
     "insee = \"POLYGON((2.3066783  48.8179488,2.3065925  48.8159283,2.3108518  48.8159566,2.3109269  48.8179559,2.3066783  48.8179488))\"\n",
+    "paul_brousse= \"POLYGON((2.359668  48.7974719,2.3590672  48.7944258,2.3640883  48.7945106,2.3641849  48.7977687,2.359668  48.7974719))\"\n",
+    "\n",
     "eiffel_tour = \"POINT(2.2949409 48.8579388)\"\n",
     "bordeaux = \"POINT(-0.574851 44.8453837)\""
    ],
    "id": "46cb2eebc6dc4c17",
    "outputs": [],
-   "execution_count": 31
+   "execution_count": 36
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T12:37:40.372100Z",
-     "start_time": "2024-12-02T12:37:40.316523Z"
+     "end_time": "2024-12-02T16:17:53.395749Z",
+     "start_time": "2024-12-02T16:17:53.359783Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "# in query 1 we use ST_Contains\n",
     "query1 = f\"SELECT ST_Contains(ST_GeomFromWKT('{ile_france}'), ST_GeomFromWKT('{eiffel_tour}'))\"\n",
     "\n",
-    "resu1 = evalSpaceJoinQuery(query1)\n"
+    "resu1 = evalSpaceJoinQuery(query1)\n",
+    "\n",
+    "# we can do the same by using\n",
+    "query1bis = f\"SELECT ST_Within(ST_GeomFromWKT('{eiffel_tour}'), ST_GeomFromWKT('{ile_france}'))\"\n",
+    "\n",
+    "resu1bis = evalSpaceJoinQuery(query1bis)\n"
    ],
    "id": "9278d517f613fb72",
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 47
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T12:37:42.395703Z",
-     "start_time": "2024-12-02T12:37:42.344315Z"
+     "end_time": "2024-12-02T16:18:07.904435Z",
+     "start_time": "2024-12-02T16:18:07.775883Z"
     }
    },
    "cell_type": "code",
-   "source": "resu1.show()",
+   "source": [
+    "resu1.show()\n",
+    "resu1bis.show()"
+   ],
    "id": "90aaed97ca8e8247",
    "outputs": [
     {
@@ -227,11 +247,17 @@
       "+------+\n",
       "|  true|\n",
       "+------+\n",
+      "\n",
+      "+------+\n",
+      "|result|\n",
+      "+------+\n",
+      "|  true|\n",
+      "+------+\n",
       "\n"
      ]
     }
    ],
-   "execution_count": 24
+   "execution_count": 48
   },
   {
    "metadata": {
@@ -305,6 +331,254 @@
     }
    ],
    "execution_count": 32
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 2. ST_Crosses",
+   "id": "e9ac2f9f82816068"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-02T13:45:31.690764Z",
+     "start_time": "2024-12-02T13:45:31.509366Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "query4 = f\"SELECT ST_Crosses(ST_GeomFromWKT('{casd}'),ST_GeomFromWKT('{insee}'))\"\n",
+    "resu4 = evalSpaceJoinQuery(query4)\n",
+    "resu4.show()"
+   ],
+   "id": "d9bcf592fc0c1355",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|result|\n",
+      "+------+\n",
+      "| false|\n",
+      "+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 33
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 3. ST_Disjoint\n",
+    "\n",
+    "\n"
+   ],
+   "id": "ebb321d2f50fa3d2"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-02T13:46:56.745310Z",
+     "start_time": "2024-12-02T13:46:56.685937Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "query = f\"SELECT ST_Disjoint(ST_GeomFromWKT('{casd}'),ST_GeomFromWKT('{insee}'))\"\n",
+    "resu = evalSpaceJoinQuery(query)\n",
+    "resu.show()"
+   ],
+   "id": "d01f2465edf883c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|result|\n",
+      "+------+\n",
+      "| false|\n",
+      "+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 34
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-02T13:47:23.618947Z",
+     "start_time": "2024-12-02T13:47:23.550268Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "query = f\"SELECT ST_Disjoint(ST_GeomFromWKT('{casd}'),ST_GeomFromWKT('{paul_brousse}'))\"\n",
+    "resu = evalSpaceJoinQuery(query)\n",
+    "resu.show()"
+   ],
+   "id": "d01fdbc86e472edb",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|result|\n",
+      "+------+\n",
+      "|  true|\n",
+      "+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 37
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "5f8c0dd3f90f6523"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 4. ST_DWithin\n",
+    "\n",
+    "Returns true if 'leftGeometry' and 'rightGeometry' are within a specified 'distance'. \n",
+    "\n",
+    "If useSpheroid is passed true, ST_DWithin uses Sedona's `ST_DistanceSpheroid` to check the spheroid distance between the centroids of two geometries. \n",
+    "\n",
+    "If useSpheroid is passed false, ST_DWithin uses Euclidean distance and the unit of the distance is the same as the CRS of the geometries. To obtain the correct result, please consider using `ST_Transform` to put data in an appropriate CRS.\n",
+    "\n",
+    "The **unit of the distance in this case is meter**. \n",
+    "\n"
+   ],
+   "id": "d35ffcc32201a73a"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-02T13:56:17.035141Z",
+     "start_time": "2024-12-02T13:56:16.979097Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# the unit of distance is meter\n",
+    "distance = 4700\n",
+    "query = f\"SELECT ST_DWithin(ST_GeomFromWKT('{casd}'),ST_GeomFromWKT('{paul_brousse}'),{distance},true)\"\n",
+    "resu = evalSpaceJoinQuery(query)\n",
+    "resu.show()"
+   ],
+   "id": "d781619c81ce54ee",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|result|\n",
+      "+------+\n",
+      "|  true|\n",
+      "+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 44
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## ST_Equals and ST_OrderingEquals\n",
+    "\n",
+    "- **ST_Equals**: Returns true if the geometries are equal\n",
+    "- **ST_OrderingEquals**: Returns true if the geometries are equal and the coordinates are in the same order\n",
+    "We have two lines, line1 and line2. They represent the same line but with different coordinates.\n",
+    "So with function `ST_Equals`, it returns True. with function `ST_OrderingEquals`, it returns false "
+   ],
+   "id": "152199828c16222d"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-02T14:02:34.810223Z",
+     "start_time": "2024-12-02T14:02:34.702133Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "line1 = \"LINESTRING(0 0,10 10)\"\n",
+    "line2 = \"LINESTRING(0 0,5 5,10 10)\"\n",
+    "query = f\"SELECT ST_Equals(ST_GeomFromWKT('{line1}'),ST_GeomFromWKT('{line2}'))\"\n",
+    "resu = evalSpaceJoinQuery(query)\n",
+    "resu.show()"
+   ],
+   "id": "27adb8ca2f8beb3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|result|\n",
+      "+------+\n",
+      "|  true|\n",
+      "+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 45
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "3eab9e30e8b286af"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-02T16:07:07.607182Z",
+     "start_time": "2024-12-02T16:07:07.331988Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "line1 = \"LINESTRING(0 0,10 10)\"\n",
+    "line2 = \"LINESTRING(0 0,5 5,10 10)\"\n",
+    "query = f\"SELECT ST_OrderingEquals(ST_GeomFromWKT('{line1}'),ST_GeomFromWKT('{line2}'))\"\n",
+    "resu = evalSpaceJoinQuery(query)\n",
+    "resu.show()"
+   ],
+   "id": "3d75d6567dc8bf51",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|result|\n",
+      "+------+\n",
+      "| false|\n",
+      "+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 46
   }
  ],
  "metadata": {
