--- a/notebooks/basic_tutorial/03.Spatial_query_in_sedona.ipynb
+++ b/notebooks/basic_tutorial/03.Spatial_query_in_sedona.ipynb
@@ -10,47 +10,66 @@
     "In this tutorial, we will play with spatial join query. To better understand the query, we use this [website](https://www.keene.edu/campus/maps/tool/) to get coordinates.\n",
     "\n",
     "For example, the below polygone represent Île-de-France:\n",
+    "```text\n",
     "1.8814087,49.2265665\n",
     "1.8099976,48.5884175\n",
     "2.9347229,48.5820584\n",
     "3.0528259,49.2068317\n",
     "1.8814087,49.2265665\n",
+    "```\n",
     "\n",
     "polygone represents casd:\n",
+    "```text\n",
     "2.3065817,48.8204849\n",
     "2.3063672,48.8177934\n",
     "2.3113775,48.8177369\n",
     "2.3114955,48.8205838\n",
     "2.3065817,48.8204849\n",
     "\n",
+    "```\n",
+    "\n",
     "polygone represents insee:\n",
+    "```text\n",
     "2.3066783,48.8179488\n",
     "2.3065925,48.8159283\n",
     "2.3108518,48.8159566\n",
     "2.3109269,48.8179559\n",
     "2.3066783,48.8179488\n",
     "\n",
+    "```\n",
+    "\n",
     "polygone represents hospital Paul-Brousse:\n",
+    "```text\n",
     "2.359668,48.7974719\n",
     "2.3590672,48.7944258\n",
     "2.3640883,48.7945106\n",
     "2.3641849,48.7977687\n",
     "2.359668,48.7974719\n",
+    "```\n",
     "\n",
     "\n",
     "      \n",
     "The coordinates of eiffel-tour:\n",
+    "```text\n",
     "2.2949409,48.8579388 \n",
+    "```\n",
     "\n",
     "The coordinates of bordeaux:\n",
+    "```text\n",
     "-0.574851 44.8453837\n",
+    "```\n",
+    "\n",
+    "Below is a list of predefine functions that implements geospatial predicates:\n",
     "\n",
     "- **ST_Contains**(polygondf.polygonshape,pointdf.pointshape): Return true if A fully contains B.\n",
     "- **ST_Crosses**(polygondf.polygonshape,polygondf.polygonshape): Return true if A crosses B. (E.g. check if a polygon cross inside a polygone)\n",
     "- **ST_Disjoint**(polygondf.polygonshape,polygondf.polygonshape): Return true if A and B are disjoint. (E.g. check if a polygon disjoint another polygone)\n",
     "- **ST_DWithin**(leftGeometry: Geometry, rightGeometry: Geometry, distance: Double, useSpheroid: Optional(Boolean) = false): \n",
     "- **ST_Equals**(A: Geometry, B: Geometry): Return true if A equals to B. (E.g. checks if two line string LINESTRING(0 0,10 10), LINESTRING(0 0,5 5,10 10) equals.)\n",
-    "- ST_Intersects(polygondf.polygonshape,pointdf.pointshape): Return true if A intersects B. "
+    "- **ST_Intersects**(polygondf.polygonshape,pointdf.pointshape): Return true if A intersects B. \n",
+    "- **ST_OrderingEquals**(A: geometry, B: geometry): Returns true if the geometries are equal and the coordinates are in the same order\n",
+    "- **ST_Overlaps**(A: Geometry, B: Geometry): Return true if A overlaps B\n",
+    "- **ST_Relate**(geom1: Geometry, geom2: Geometry, intersectionMatrix: String):"
    ],
    "id": "ee2433d4d6aff593"
   },
@@ -171,10 +190,11 @@
     "\n",
     "- **ST_Contains**(A: Geometry, B: Geometry): Return true if A fully contains B.\n",
     "- **ST_Within**(A: Geometry, B: Geometry): Return true if A is fully contained by B\n",
-    "We check if a polygon contains a point or not:\n",
-    "- eiffel_tour(point) in Île-de-France(polygon) or not\n",
-    "- bordeaux city hall(point) in Île-de-France(polygon) or not\n",
-    "- casd(polygon) inside Île-de-France(polygon) or not"
+    "\n",
+    "In below code example, we check if:\n",
+    "- eiffel_tour(point) within Île-de-France(polygon)/ Île-de-France contains eiffel_tour\n",
+    "- bordeaux city hall(point) in Île-de-France(polygon) / Île-de-France contains eiffel_tour\n",
+    "- casd(polygon) inside Île-de-France(polygon) /"
    ],
    "id": "869d3439eaee0797"
   },
